CAMBIO EN PLANTILLA

--- a/plantilla1_18_09_20.html
+++ b/plantilla1_18_09_20.html
@@ -12,7 +12,7 @@
     <header>
         <nav id="encabezado">
             <div id="empresa">
-                <p id="logo">COMPOSITION</p>
+                <p id="logo">COMPOSICION</p>
                 <h6 id="claim">Free PSD Wedsite Templates</h6>
                
          
